fix : fix heading styles for dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -120,7 +120,6 @@ h4,
 h5,
 h6 {
   font-weight: var(--fontWeight-bold);
-  color: var(--color-heading);
 }
 
 h1 {
